# cppstacksize

./: .clang-format  .editorconfig  README.md  meson.build  package.json
contrib/: fix-include-guards.go  fix-include-guards_test.go  format  install-wasm.sh  server.mjs  update-test-asm.sh
src/: app.mjs  asm-stack-map.mjs  codeview-constants.mjs  codeview.mjs  coff.mjs  guid.mjs  index.html  is-main.mjs  loader.mjs  logger.mjs  pdb.mjs  pe.mjs  project.mjs  reader.mjs  update-test-asm.mjs  util.mjs
src/cppstacksize/: asm-stack-map-debug.cpp  asm-stack-map.cpp  asm-stack-map.h  base.h  c-api.cpp  c-api.h  codeview-constants.cpp  codeview-constants.h  codeview.h  dump-stack-map.cpp  file.cpp  file.h  guid.cpp  guid.h  hello.cpp  hello.h  line-tables-debug.cpp  line-tables.h  logger.cpp  logger.h  pdb-reader.h  pdb.h  pe.h  project.h  reader.cpp  reader.h  register-debug.cpp  register.cpp  register.h  sparse-bit-set.h  stack-map-touch-group.cpp  stack-map-touch-group.h  util.h
src/cppstacksize/gui/: function-table.cpp  function-table.h  locals-table.cpp  locals-table.h  log-table.cpp  log-table.h  main-window.cpp  main-window.h  main.cpp  pch.h  stack-map-table.cpp  stack-map-table.h  style.h
subprojects/: .gitignore  capstone.wrap
test/: assert-util.mjs  pch.h  test-add.mjs  test-analyzer.mjs  test-asm-stack-map.cpp  test-codeview.cpp  test-codeview.mjs  test-coff.cpp  test-coff.mjs  test-guid.cpp  test-guid.mjs  test-hello.cpp  test-line-tables.cpp  test-loader.mjs  test-pdb.cpp  test-pdb.mjs  test-pe.cpp  test-pe.mjs  test-project.cpp  test-project.mjs  test-reader-location.cpp  test-reader.cpp  test-reader.mjs  test-register.cpp  test-sparse-bit-set.cpp  test-stack-map-touch-group.cpp  test-update-test-asm.mjs
test/coff/: Makefile  alloca.cpp  array.cpp  block.cpp  call.cpp  enum.cpp  function-type.cpp  member-function.cpp  multiple-functions.cpp  parameters-int.cpp  pointer.cpp  primitive-parameters-call.cpp  primitive-parameters.cpp  primitives.cpp  struct.cpp  typedef.cpp  union.cpp
test/coff-pdb/: Makefile  example.cpp  member-function.cpp
test/cppstacksize/: asm.h  example-file.cpp  example-file.h
test/pdb/: Makefile  example.cpp
test/pdb-pe/: Makefile  line-numbers.c  line-numbers.inc  multi-obj-1.c  multi-obj-2.c  temporary.c
